ci-cd/argocd/multiple-sources/opentelemetry/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-read-timeout: 100s
    nginx.org/proxy-connect-timeout: 100s
    nginx.org/client-max-body-size: 550m
    nginx.ingress.kubernetes.io/proxy-body-size: 550m
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: opentelemetry-collector
  namespace: opentelemetry
spec:
  rules:
  - host: abc.crispycoffee.com
    http:
      paths:
      - backend:
          service:
            name: opentelemetry-collector
            port:
              number: 4318
        pathType: ImplementationSpecific
